--- a/index.html
+++ b/index.html
@@ -1,74 +1,52 @@
-<!DOCTYPE html>
-<html>
-
+<!doctype html>
+<html lang="ja">
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Mejiro Logic Club Official site : Mejiro Rogic Club Official site">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Mejiro Logic Club Official site</title>
+    <meta charset="UTF-8"/>
+    <title>目白ロジックサークル</title>
   </head>
-
   <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/MejiroLogic">View on GitHub</a>
-
-          <h1 id="project_title">Mejiro Logic Club Official site</h1>
-          <h2 id="project_tagline">Mejiro Rogic Club Official site</h2>
-
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
+    <h1>目白ロジックサークル</h1>
+    <h2>ページの説明</h2>
+    <section class="summary">
+      このサイトは学習院大学内にある目白ロジッククラブ(通称MLC)の非公式
+      ページです。<br>
+      URLの通りこのページは<a href="https://github.com">Github</a>
+      にて運用されており、広報用のサイトと同時にクラブ内の成果物の公開の場として
+      設置されました。<br>
+    </section>
+    <h2>目白ロジックサークルとは</h2>
+    <section class="about">
+      <a href="http://www-cc.gakushuin.ac.jp/~13043015/mejirologic/">
+      公式のページ</a>より引用
+      <blockquote>
+	目白ロジックサークルは論理学に興味をもつ人達が互いに交流を
+	深める場として設立されました。<br>
+	同時に、この手の話題について漠然とした印象を抱いている人にも、
+	入門の機会といいますか、出会いの場を提供できたらよいと考えています。
+      </blockquote>
+    </section>
+    <h2>活動情報</h2>
+    <section id="info">
+      現在予定されている活動はありません。
+      <table id="activity">
+	<caption>活動情報</caption>
+	<thead>
+	  <tr><th>日付</th><th>内容</th><th>場所</th></tr>
+	</thead>
+	<tbody>
+	  <tr><th>2015/02/05</th><th>定例会</th><th>未定</th></tr>
+	</tbody>
+      </table>
+    </section>
+    <h2>外部リンク</h2>
+    <nav id="link">
+      <ul>
+        <li>
+	  <a href="http://www-cc.gakushuin.ac.jp/~13043015/mejirologic/">
+	    目白ロジックサークル公式ページ
+	  </a>
+	</li>
+      </ul>
+    </nav>
   </body>
 </html>
