クラブという名称をサークルに変更

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <h1>目白ロジックサークル</h1>
     <h2>ページの説明</h2>
     <section class="summary">
-      このサイトは学習院大学内にある目白ロジッククラブ(通称MLC)の非公式
+      このサイトは学習院大学内にある目白ロジックサークル(通称MLC)の非公式
       ページです。<br>
       URLの通りこのページは<a href="https://github.com">Github</a>
-      にて運用されており、広報用のサイトと同時にクラブ内の成果物の公開の場として
+      にて運用されており、広報用のサイトと同時にサークル内の成果物の公開の場として
       設置されました。<br>
     </section>
     <h2>目白ロジックサークルとは</h2>
