--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       このサイトは学習院大学内にある目白ロジックサークル(通称MLC)の非公式
       ページです。<br>
       URLの通りこのページは<a href="https://github.com">Github</a>
-      にて運用されており、広報用のサイトと同時にサークル内の成果物の公開の場として
-      設置されました。<br>
+      にて運用されており、広報用のサイトと同時にサークル内の
+      成果物の公開の場として設置されました。<br>
     </section>
     <h2>目白ロジックサークルとは</h2>
     <section class="about">
@@ -47,5 +47,12 @@
 	</li>
       </ul>
     </nav>
+    <h2>現在セミナー使っている本</h2>
+    <section id="cm">
+      <iframe src="http://rcm-fe.amazon-adsystem.com/e/cm?lt1=_blank&bc1=000000&IS2=1&bg1=FFFFFF&fc1=000000&lc1=0000FF&t=mejir-22&o=9&p=8&l=as1&m=amazon&f=ifr&ref=tf_til&asins=4535785562" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
+      <iframe src="http://rcm-fe.amazon-adsystem.com/e/cm?t=mejir-22&o=9&p=8&l=as1&asins=4254117655&ref=tf_til&fc1=000000&IS2=1&lt1=_blank&m=amazon&lc1=0000FF&bc1=000000&bg1=FFFFFF&f=ifr" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
+      <iframe src="http://rcm-fe.amazon-adsystem.com/e/cm?t=mejir-22&o=9&p=8&l=as1&asins=4563003379&ref=tf_til&fc1=000000&IS2=1&lt1=_blank&m=amazon&lc1=0000FF&bc1=000000&bg1=FFFFFF&f=ifr" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
+      <iframe src="http://rcm-fe.amazon-adsystem.com/e/cm?t=mejir-22&o=9&p=8&l=as1&asins=4535785759&ref=tf_til&fc1=000000&IS2=1&lt1=_blank&m=amazon&lc1=0000FF&bc1=000000&bg1=FFFFFF&f=ifr" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
+    </section>
   </body>
 </html>
