--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
       <iframe src="http://rcm-fe.amazon-adsystem.com/e/cm?t=mejir-22&o=9&p=8&l=as1&asins=4254117655&ref=tf_til&fc1=000000&IS2=1&lt1=_blank&m=amazon&lc1=0000FF&bc1=000000&bg1=FFFFFF&f=ifr" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
       <iframe src="http://rcm-fe.amazon-adsystem.com/e/cm?t=mejir-22&o=9&p=8&l=as1&asins=4563003379&ref=tf_til&fc1=000000&IS2=1&lt1=_blank&m=amazon&lc1=0000FF&bc1=000000&bg1=FFFFFF&f=ifr" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
       <iframe src="http://rcm-fe.amazon-adsystem.com/e/cm?t=mejir-22&o=9&p=8&l=as1&asins=4535785759&ref=tf_til&fc1=000000&IS2=1&lt1=_blank&m=amazon&lc1=0000FF&bc1=000000&bg1=FFFFFF&f=ifr" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
+      <p>このコンテンツはamazon.co.jpを宣伝しリンクすることによってサイトが紹介料を獲得できる手段を提供することを目的に設定されたアフィリエイト宣伝プログラムである、	
+　　　Amazonアソシエイト・プログラムの参加者です。</p>
+    	
     </section>
   </body>
 </html>
