--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
     </section>
     <h2>活動情報</h2>
     <section id="info">
-      現在予定されている活動はありません。
+      <!--現在予定されている活動はありません。-->
       <table id="activity">
 	<thead>
 	  <tr><th>日付</th><th>内容</th><th>場所</th></tr>
 	</thead>
 	<tbody>
-	  <tr><th>2015/02/05</th><th>定例会</th><th>未定</th></tr>
-	  <tr><th>2015/02/06</th><th>解析ゼミとMLC定例会</th><th>理学部図書室下</th></tr>
+	  <!--<tr><th>2015/02/05</th><th>定例会</th><th>未定</th></tr>-->
+	  <tr><th>2015/02/05</th><th>解析ゼミとMLC定例会</th><th>理学部図書室下</th></tr>
 	  <tr><th>2015/02/12</th><th>解析ゼミとMLC定例会</th><th>理学部図書室下</th></tr>
 	</tbody>
       </table>
