--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	</li>
       </ul>
     </nav>
-    <h2>現在セミナー使っている本</h2>
+    <h2>現在セミナーで使っている本</h2>
     <section id="cm">
       <iframe src="http://rcm-fe.amazon-adsystem.com/e/cm?lt1=_blank&bc1=000000&IS2=1&bg1=FFFFFF&fc1=000000&lc1=0000FF&t=mejir-22&o=9&p=8&l=as1&m=amazon&f=ifr&ref=tf_til&asins=4535785562" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
       <iframe src="http://rcm-fe.amazon-adsystem.com/e/cm?t=mejir-22&o=9&p=8&l=as1&asins=4254117655&ref=tf_til&fc1=000000&IS2=1&lt1=_blank&m=amazon&lc1=0000FF&bc1=000000&bg1=FFFFFF&f=ifr" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
