広告の削除と一部予定の変更

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 	</thead>
 	<tbody>
 	  <!--<tr><th>2015/02/05</th><th>定例会</th><th>未定</th></tr>-->
-	  <tr><th>2015/02/05</th><th>解析ゼミとMLC定例会</th><th>理学部図書室下</th></tr>
-	  <tr><th>2015/02/12</th><th>解析ゼミとMLC定例会</th><th>理学部図書室下</th></tr>
+	  <tr><th>2015/02/05</th><th>MLC定例会</th><th>理学部図書室下</th></tr>
+	  <tr><th>2015/02/12</th><th>MLC定例会</th><th>理学部図書室下</th></tr>
 	</tbody>
       </table>
     </section>
@@ -52,16 +52,7 @@
     </nav>
     <h2>現在セミナーで使っている本</h2>
     <section id="cm">
-      <iframe src="http://rcm-fe.amazon-adsystem.com/e/cm?lt1=_blank&bc1=000000&IS2=1&bg1=FFFFFF&fc1=000000&lc1=0000FF&t=mejir-22&o=9&p=8&l=as1&m=amazon&f=ifr&ref=tf_til&asins=4535785562" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
-      <iframe src="http://rcm-fe.amazon-adsystem.com/e/cm?t=mejir-22&o=9&p=8&l=as1&asins=4254117655&ref=tf_til&fc1=000000&IS2=1&lt1=_blank&m=amazon&lc1=0000FF&bc1=000000&bg1=FFFFFF&f=ifr" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
-      <iframe src="http://rcm-fe.amazon-adsystem.com/e/cm?t=mejir-22&o=9&p=8&l=as1&asins=4563003379&ref=tf_til&fc1=000000&IS2=1&lt1=_blank&m=amazon&lc1=0000FF&bc1=000000&bg1=FFFFFF&f=ifr" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
-      <iframe src="http://rcm-fe.amazon-adsystem.com/e/cm?t=mejir-22&o=9&p=8&l=as1&asins=4535785759&ref=tf_til&fc1=000000&IS2=1&lt1=_blank&m=amazon&lc1=0000FF&bc1=000000&bg1=FFFFFF&f=ifr" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
-      <p>
-      このコンテンツはamazon.co.jpを宣伝しリンクすることによって
-      サイトが紹介料を獲得できる手段を提供することを
-      目的に設定されたアフィリエイト宣伝プログラムである、
-      Amazonアソシエイト・プログラムの参加者です。
-      </p>
+      
     </section>
   </body>
 </html>
