--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 	</thead>
 	<tbody>
 	  <!--<tr><th>2015/02/05</th><th>定例会</th><th>未定</th></tr>-->
-	  <tr><th>2015/02/05</th><th>MLC定例会</th><th>理学部図書室下</th></tr>
-	  <tr><th>2015/02/12</th><th>MLC定例会</th><th>理学部図書室下</th></tr>
+	  <!--<tr><th>2015/02/05</th><th>MLC定例会</th><th>理学部図書室下</th></tr>-->
+	  <tr><th>2015/02/12</th><th>MLC定例会</th><th>大学図書館</th></tr>
 	</tbody>
       </table>
     </section>
