鹿島先生の本のリンクの掲載

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
     </nav>
     <h2>現在セミナーで使っている本</h2>
     <section id="cm">
-      
+      <ul>
+	<li><a href="http://www.amazon.co.jp/dp/4254117655">数理論理学[鹿島 亮(著)]</a></li>
+      </ul>
     </section>
   </body>
 </html>
