古森先生、小野先生の本のリンクの掲載

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <section id="cm">
       <ul>
 	<li><a href="http://www.amazon.co.jp/dp/4254117655">数理論理学[鹿島 亮(著)]</a></li>
+	<li><a href="http://www.amazon.co.jp/dp/4535785562">現代数理論理学序説[古森 雄一(著) 小野 寛晰(著)]</a></li>
       </ul>
     </section>
   </body>
