--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
       <div class="rhs">
 	<p>目白ロジックサークルの最新情報など</p>
 	<ul>
-	  <li><a href="">目白ロジックHP(公式)</a></li>
+	  <li><a href="http://www-cc.gakushuin.ac.jp/~13043015/mejirologic/">目白ロジックHP(公式)</a></li>
 	</ul>
 	<p>現在セミナーにて使用している本</p>
 	<ul>
-	  <li><a href="">現代数理論理学序説(著 小野・古森)</a></li>
-	  <li><a href="">数理論理学入門(著 鹿島)</a></li>
+	  <li><a href="http://www.amazon.co.jp/dp/4535785562">現代数理論理学序説(著 小野・古森)</a></li>
+	  <li><a href="http://www.amazon.co.jp/dp/4254117655">数理論理学入門(著 鹿島)</a></li>
 	</ul>
 	<p>目白ロジックサークル内で発表されたもの</p>
 	<ul>
-	  <li><a href="https://github.com/ta2gch/math.md">Math.md(数式拡張付きmarkdownライブエディタ)</a></li>
+	  <li><a href="http://github.com/ta2gch/math.md">Math.md(数式拡張付きmarkdownライブエディタ)</a></li>
 	</ul>
       </div>
     </section>
